--- a/project/pom.xml
+++ b/project/pom.xml
@@ -11,9 +11,11 @@
     <packaging>pom</packaging>
 
     <name>project</name>
-    <url>http://maven.apache.org</url>
+
     <modules>
         <module>dependencies</module>
+        <module>common</module>
+        <module>modules</module>
     </modules>
 
     <properties>
@@ -28,4 +30,19 @@
             <!--<scope>test</scope>-->
         <!--</dependency>-->
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
