streaming to hbase complete

--- a/project/common/tests/pom.xml
+++ b/project/common/tests/pom.xml
@@ -18,6 +18,7 @@
         <module>kafka-general-producer</module>
         <module>kafka-general-consumer</module>
         <module>hello-logger</module>
+        <module>hbase112</module>
     </modules>
 
     <properties>
