--- a/project/modules/streaming/pom.xml
+++ b/project/modules/streaming/pom.xml
@@ -17,11 +17,26 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.hgt</groupId>
+            <artifactId>hbase-helper</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming-kafka_2.10</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${google.guava.vesion}</version>
+        </dependency>
         <!--<dependency>-->
-            <!--<groupId>junit</groupId>-->
-            <!--<artifactId>junit</artifactId>-->
-            <!--<version>3.8.1</version>-->
-            <!--<scope>test</scope>-->
+        <!--<groupId>junit</groupId>-->
+        <!--<artifactId>junit</artifactId>-->
+        <!--<version>3.8.1</version>-->
+        <!--<scope>test</scope>-->
         <!--</dependency>-->
     </dependencies>
 </project>
