[conf]migrate to new cluster

--- a/project/common/tests/hello-logger/src/main/resources/log4j.properties
+++ b/project/common/tests/hello-logger/src/main/resources/log4j.properties
@@ -10,7 +10,8 @@ log4j.logger.com.hgt=debug, kafka
 log4j.appender.kafka=org.apache.kafka.log4jappender.KafkaLog4jAppender
 #==========\u914D\u7F6E\u65E5\u5FD7topic==========
 log4j.appender.kafka.topic=topic-hello
-log4j.appender.kafka.brokerList=192.168.99.111:6667,192.168.99.112:6667,192.168.99.113:6667,192.168.99.114:6667
+#log4j.appender.kafka.brokerList=192.168.99.111:6667,192.168.99.112:6667,192.168.99.113:6667,192.168.99.114:6667
+log4j.appender.kafka.brokerList=192.168.100.241:6667
 log4j.appender.kafka.compressionType=none
 log4j.appender.kafka.syncSend=true
 log4j.appender.kafka.layout=org.apache.log4j.PatternLayout
