--- a/project/common/tests/pom.xml
+++ b/project/common/tests/pom.xml
@@ -22,6 +22,7 @@
         <module>geoip</module>
         <module>es-query</module>
         <module>java-bean</module>
+        <module>pipeline-log2es</module>
     </modules>
 
     <properties>
