--- a/project/modules/msg-router/pom.xml
+++ b/project/modules/msg-router/pom.xml
@@ -7,13 +7,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>notification</artifactId>
+    <artifactId>msg-router</artifactId>
     <packaging>jar</packaging>
 
-    <name>notification</name>
+    <name>msg-router</name>
+    <!--<url>http://maven.apache.org</url>-->
 
     <properties>
-        <!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
