--- a/project/modules/log-boot/pom.xml
+++ b/project/modules/log-boot/pom.xml
@@ -7,16 +7,23 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>starter</artifactId>
+    <artifactId>log-boot</artifactId>
     <packaging>jar</packaging>
 
-    <name>starter</name>
+    <name>log-boot</name>
+    <!--<url>http://maven.apache.org</url>-->
 
     <properties>
-        <!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
         <!--<dependency>-->
             <!--<groupId>junit</groupId>-->
             <!--<artifactId>junit</artifactId>-->
