--- a/project/modules/logbase/pom.xml
+++ b/project/modules/logbase/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>logbase</artifactId>
 
-    <name>logboard-base</name>
+    <name>logbase</name>
 
     <properties>
         <spring.boot.version>1.3.6.RELEASE</spring.boot.version>
@@ -175,7 +175,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring.boot.version}</version>
                 <configuration>
-                    <mainClass>io.yaoooo.App</mainClass>
+                    <mainClass>com.hgt.App</mainClass>
                     <layout>ZIP</layout>
                 </configuration>
                 <executions>
