--- a/project/common/tests/hello-logger/pom.xml
+++ b/project/common/tests/hello-logger/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>tests</artifactId>
@@ -11,10 +12,6 @@
     <packaging>jar</packaging>
 
     <name>hello-logger</name>
-
-    <properties>
-        <!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
-    </properties>
 
     <dependencies>
         <dependency>
@@ -48,12 +45,6 @@
             <artifactId>spring-boot-starter-log4j</artifactId>
         </dependency>
 
-        <!--<dependency>-->
-        <!--<groupId>junit</groupId>-->
-        <!--<artifactId>junit</artifactId>-->
-        <!--<version>3.8.1</version>-->
-        <!--<scope>test</scope>-->
-        <!--</dependency>-->
     </dependencies>
 
     <build>
@@ -76,4 +67,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
