--- a/project/modules/msg-router/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/project/modules/msg-router/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,9 @@
-{"properties": [{
-  "name": "topic",
-  "type": "java.lang.String",
-  "description": "A description for 'topic'"
-}]}
+{
+  "properties": [
+    {
+      "name": "topic",
+      "type": "java.lang.String",
+      "description": "A description for 'topic'"
+    }
+  ]
+}
