[remove] unused tests

--- a/project/common/tests/general-spring/pom.xml
+++ b/project/common/tests/general-spring/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>tests</artifactId>
@@ -8,27 +7,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hello-logger</artifactId>
+    <artifactId>general-spring</artifactId>
     <packaging>jar</packaging>
 
-    <name>hello-logger</name>
+    <name>general-spring</name>
+    <!--<url>http://maven.apache.org</url>-->
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.hgt</groupId>
-            <artifactId>ilogger</artifactId>
-            <version>0.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
-            <version>${kafka.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-log4j-appender</artifactId>
-            <version>${kafka.version}</version>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -67,5 +57,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
