[replace]local es

--- a/project/modules/streaming/src/main/resources/config.properties
+++ b/project/modules/streaming/src/main/resources/config.properties
@@ -2,3 +2,9 @@
 kafka.zookeeper=192.168.99.141:2181,192.168.99.142:2181,192.168.99.143:2181
 group.name=test1
 topic.list=topic-hello,topic-hello2
+#elasticsearch\u914D\u7F6E
+es.cname=es-yao
+#es.chost=192.168.99.75:9300
+es.index=test-log
+es.type=log9type
+es.chost=192.168.99.140:9300,192.168.99.141:9300
