[add] socket demo

--- a/project/modules/pom.xml
+++ b/project/modules/pom.xml
@@ -22,6 +22,7 @@
         <module>logbase</module>
         <module>log-boot</module>
         <module>es-query</module>
+        <module>task-scheduler</module>
     </modules>
 
     <dependencyManagement>
