--- a/project/modules/streaming/src/main/resources/config.properties
+++ b/project/modules/streaming/src/main/resources/config.properties
@@ -5,5 +5,5 @@ topic.list=topic-hello,topic-hello2
 #elasticsearch\u914D\u7F6E
 es.cname=es-yao
 es.chost=192.168.99.140:9300,192.168.99.141:9300
-es.index=test-log
-es.type=log9type
+es.index=hgt-logs
+es.type=common
