[add] es-query config

--- a/project/modules/es-query/src/main/resources/application.properties
+++ b/project/modules/es-query/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=8703
 logging.config=classpath:log4j2.xml
+#es\u914D\u7F6E
+es.cname=es-yao
+es.chost=192.168.99.140:9300,192.168.99.141:9300
+es.index=hgt-logs
+es.type=common
