[fix] streaming exp log

--- a/project/common/tests/hello-logger/src/main/resources/log4j.properties
+++ b/project/common/tests/hello-logger/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 beating.host=192.168.99.75
-beating.appid=hello001
+beating.appid=hello002
 #\u65E5\u5FD7\u672C\u5730\u5B58\u653E\u76EE\u5F55\uFF0C\u672A\u4F7F\u7528
 logs.root.dir=/home/apps/logs
 #\u6839logger
@@ -11,7 +11,7 @@ log4j.logger.com.hgt=debug, kafka
 #\u6307\u5B9A\u5305\u65E5\u5FD7\u8F93\u51FA\u5230kafka\u96C6\u7FA4
 log4j.appender.kafka=org.apache.kafka.log4jappender.KafkaLog4jAppender
 #==========\u914D\u7F6E\u65E5\u5FD7topic==========
-log4j.appender.kafka.topic=topic-hello
+log4j.appender.kafka.topic=topic-hello2
 log4j.appender.kafka.brokerList=192.168.99.141:6667,192.168.99.142:6667,192.168.99.143:6667
 log4j.appender.kafka.compressionType=none
 log4j.appender.kafka.syncSend=true
