[add] log counts streaming

--- a/project/modules/msg-router/src/main/resources/application.properties
+++ b/project/modules/msg-router/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #tomcat server
 server.port=8703
 #redis
-topic=spring-boot
+topic=router
 spring.redis.database=0
 spring.redis.host=123.206.29.126
 spring.redis.password=
