--- a/project/modules/logbase/pom.xml
+++ b/project/modules/logbase/pom.xml
@@ -20,7 +20,7 @@
         <jackson.version>2.6.7</jackson.version>
         <druid.version>1.0.22</druid.version>
         <mysql.jdbc.version>5.1.39</mysql.jdbc.version>
-        <!--<junit.version>4.12</junit.version>-->
+        <junit.version>4.12</junit.version>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -185,6 +185,11 @@
 
 
         <!--Swagger end-->
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
 
 
     </dependencies>
