--- a/project/modules/logbase/src/main/resources/application.properties
+++ b/project/modules/logbase/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #mysql
-spring.datasource.url=jdbc:mysql://192.168.99.253:3306/logbase
+spring.datasource.url=jdbc:mysql://192.168.99.253:3306/logbase?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 #spring.datasource.url=jdbc:mysql://localhost:3306/logbase
 #spring.datasource.username=root
