[add] quartz test

--- a/project/common/tests/pom.xml
+++ b/project/common/tests/pom.xml
@@ -20,6 +20,7 @@
         <module>kafka-general-consumer</module>
         <module>hello-logger</module>
         <module>msg-producer</module>
+        <module>quartz-task</module>
     </modules>
 
     <properties>
